--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "src/assets/vendor/boxicons/css/boxicons.min.css",
-              "src/assets/vendor/venobox/venobox.css"
+              "src/assets/vendor/venobox/venobox.css",
+              "src/assets/vendor/owl.carousel/assets/owl.carousel.min.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.js",
