Starting new project

--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,10 @@
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "src/assets/vendor/boxicons/css/boxicons.min.css",
               "src/assets/vendor/venobox/venobox.css",
-              "src/assets/vendor/owl.carousel/assets/owl.carousel.min.css"
+              "src/assets/vendor/owl.carousel/assets/owl.carousel.min.css",
+              "src/assets/vendor/aos/aos.css",
+              "src/assets/css/style.css",
+              "src/assets/css/mycard.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.js",
