--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,6 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "src/assets/vendor/boxicons/css/boxicons.min.css",
@@ -35,7 +34,8 @@
               "src/assets/vendor/owl.carousel/assets/owl.carousel.min.css",
               "src/assets/vendor/aos/aos.css",
               "src/assets/css/style.css",
-              "src/assets/css/mycard.css"
+              "src/assets/css/mycard.css",
+              "src/styles.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.js",
