--- a/angular.json
+++ b/angular.json
@@ -39,6 +39,7 @@
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.js",
+              "src/assets/vendor/jquery/jquery.min.js",
             ]
           },
           "configurations": {
